--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pebble-message-queue",
-  "version": "2.0.4",
+  "name": "@smallstoneapps/message-queue",
+  "version": "2.1.0",
   "description": "",
   "main": "src/c/message-queue.c",
   "repository": {
@@ -21,7 +21,7 @@
       "basalt",
       "chalk"
     ],
-    "appKeys": [
+    "messageKeys": [
       "group",
       "operation",
       "data"
