--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smallstoneapps/message-queue",
-  "version": "2.1.1",
+  "version": "2.2.0",
   "description": "",
   "main": "src/c/message-queue.c",
   "repository": {
@@ -18,6 +18,7 @@
     "sdkVersion": "3",
     "enableMultiJS": true,
     "targetPlatforms": [
+      "aplite",
       "basalt",
       "chalk"
     ],
