--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@smallstoneapps/message-queue",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "description": "",
   "main": "src/c/message-queue.c",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/smallstoneapps/message-queue.git"
   },
+  "keywords": [
+    "pebble-package"
+  ],
   "author": "Matthew Tole <pebble@matthewtole.com>",
   "license": "MIT",
   "bugs": {
