--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smallstoneapps/message-queue",
-  "version": "2.4.1",
+  "version": "2.4.2",
   "description": "",
   "main": "src/c/message-queue.c",
   "repository": {
@@ -33,6 +33,8 @@
     ]
   },
   "files": [
-    "dist.zip"
+    "dist.zip",
+    "src/",
+    "include/"
   ]
 }
